syntax = "proto3";

package fainder;
option java_package = "de.tuberlin.dima.fainder";
option java_multiple_files = true;

service LuceneConnector {
  rpc Evaluate (QueryRequest) returns (QueryResponse);
  rpc RecreateIndex (RecreateIndexRequest) returns (RecreateIndexResponse);
}

message QueryRequest {
  string query = 1;
  repeated int32 doc_ids = 2;
  bool enable_highlighting = 3;  // Add highlighting flag
}

// Add a new message type for highlight entries
message HighlightEntry {
  string field = 1;
  string text = 2;
}

message QueryResponse {
  repeated int32 results = 1;
  repeated float scores = 2;
  map<int32, HighlightEntry> highlights = 3;  // Changed to map from int32 to HighlightEntry
}

message RecreateIndexRequest {}

message RecreateIndexResponse {
  bool success = 1;
  string message = 2;
}
